# VEDirect

./: CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
.github/workflows/: arduino_build.yml  ci.yml
examples/VEDirectBasic/: VEDirectBasic.ino
examples/VEDirectESP32Basic/: VEDirectESP32Basic.ino
examples/VEDirectESP32LogOnly/: VEDirectESP32LogOnly.ino
src/: CMakeLists.txt  VEDirect.cpp  VEDirect.h
tests/: CMakeLists.txt
tests/integration/: test_VEDirect.cpp
tests/mocks/: Arduino.h  Stream.h
